--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <application
         android:allowBackup="true"
@@ -10,7 +10,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ClassConnect">
+        android:theme="@style/Theme.ClassConnect" >
+        <activity
+            android:name=".EditStudentProfile"
+            android:exported="false" />
+        <activity
+            android:name=".EditTutorProfile"
+            android:exported="false" />
         <activity
             android:name=".ResetStudentPassword"
             android:exported="false" />
@@ -43,7 +49,7 @@
             android:exported="false" />
         <activity
             android:name=".SignInChoice"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
